--- a/user.yml
+++ b/user.yml
@@ -1,8 +1,8 @@
 --- # Personal information
-first: Sunvir
-last: Singh
-watiam: s655sing
-student: 21100544
-email: s655sing@uwaterloo.ca
+first: Pulkit
+last: Pahuja
+watiam: p2pahuja
+student: 21071567
+email: p2pahuja@uwaterloo.ca
 python: 3 
 ...
